mdapipkg/objects/QS__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Captures houses qualification numbers for Lead and Opportunity equations</description>
    <fields>
        <fullName>Ann_Rev_Agency__c</fullName>
        <description>Holds value for Annual Revenue - Dollar business income - for Agency-type.</description>
        <inlineHelpText>Holds value for Annual Revenue - Dollar business income - for Agency-type.</inlineHelpText>
        <label>Annual Revenue (Agency)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ann_Rev_Financial__c</fullName>
        <description>Holds value for Annual Revenue - Dollar business income - for Financial Institutions.</description>
        <inlineHelpText>Holds value for Annual Revenue - Dollar business income - for Financial Institutions.</inlineHelpText>
        <label>Annual Revenue (Financial)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ann_Rev_Sales__c</fullName>
        <description>Holds value for Annual Revenue - Dollar business income - for Sales, Service and Manufacturing companies.</description>
        <inlineHelpText>Holds value for Annual Revenue - Dollar business income - for Sales, Service and Manufacturing companies.</inlineHelpText>
        <label>Annual Revenue (Sales etc.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ent_Val__c</fullName>
        <label>Enterprise Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Low_Min_Empl__c</fullName>
        <description>This houses the minimum number of employees threshold in conjunction with other requirements. Example: An company must have at least 15 employees AND $2,000,000 employee compensation.</description>
        <inlineHelpText>This houses the minimum number of employees threshold in conjunction with other requirements.</inlineHelpText>
        <label>Lower Minimum Employees</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tot_Empl_Comp__c</fullName>
        <label>Total Employee Compensation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Up_Min_Empl__c</fullName>
        <description>This houses the minimum number of employees threshold as a stand alone requirement. Example: A company must have 50 or more employees.</description>
        <inlineHelpText>This houses the minimum number of employees threshold as a stand alone requirement.</inlineHelpText>
        <label>Upper Minimum Employees</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Qualification Settings</label>
</CustomObject>